tests/test_variable_state/bad/self_reference_first_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  definition foo state bar equals foo + 1

  definition foo state baz equals foo + 1
```

```catala-test-inline
$ catala Typecheck 
[ERROR]
It is impossible to refer to the variable you are defining when defining its first state.

┌─⯈ self_reference_first_state.catala_en:10.35-10.38:
└──┐
10 │   definition foo state bar equals foo + 1
   │                                   ‾‾‾
   └─ Test
#return code 123#
```
